--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.weizhiblog</groupId>
     <artifactId>WeizhiBlog</artifactId>
     <version>0.0.1</version>
-    <name>demo</name>
+    <name>WeizhiBlog</name>
     <description>WeiZhiBlog</description>
 
     <properties>
