--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,4 +6,15 @@ server:
 
 #mysql
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/weizhiblog?serverTimezone=UTC&characterEncoding=utf-8
+    username: root
+    password: 1205
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
+mybatis:
+  mapper-locations: classpath*:com/weizhiblog/mapper/*.xml
+  type-aliases-package: com.weizhiblog.bean
+  configuration:
+    map-underscore-to-camel-case: off
