更改完善 article表、category表

--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,11 @@ backend/.mvn/
 backend/mvnw
 backend/mvnw.cmd
 
+### rebel ###
+backend/.rebel-remote.xml.bak
+rebel.xml
+rebel-remote.xml
+backend/WeizhiBlog.iml
+
+
 
