修改代码、完善所有基础功能、完善数据库，请重新建库。 基本可以跑了。

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,3 +18,9 @@ mybatis:
   type-aliases-package: com.weizhiblog.bean
   configuration:
     map-underscore-to-camel-case: off
+
+logging:
+  level:
+    root: info
+  file:
+    name: backend/src/main/resources/log/my.log
