--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^4.8.0",
     "element-ui": "^2.13.2",
+    "markdown-it-vue": "^1.1.2",
     "mavon-editor": "^2.9.0",
     "mockjs": "^1.1.0",
     "vue": "^2.6.11",
