--- a/backend/src/main/docker/Dockerfile
+++ b/backend/src/main/docker/Dockerfile
@@ -1,3 +1,6 @@
 FROM openjdk:11-jre-slim
+VOLUME /weizhiblog
 ADD *.jar app.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+RUN bash -c 'touch /app.jar'
+EXPOSE 8090
+ENTRYPOINT [ "java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar" ]
