--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,30 +1,36 @@
 server:
-  port: 8081
+#  port: 8081
+  servlet:
+    encoding:
+      charset: UTF-8
+      force: true
+  port: 8090
 spring:
   datasource:
-    url: jdbc:mysql://47.115.41.198:3306/weizhiblog?serverTimezone=GMT%2B8&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/weizhiblog?serverTimezone=GMT%2B8&characterEncoding=utf-8
     username: root
-    password: 981205
+#    password: 1205
     driver-class-name: com.mysql.cj.jdbc.Driver
+    password: 981205
   servlet:
     multipart:
       enabled: true
       max-file-size: 100MB
       max-request-size: 100MB
-#      location: D\uploadFiles\temp\
-      location: /usr/tmp/uploadFiles/temp/
-  redis:
-    database: 0
-    password: 981205
-    port: 6379
-    host: 47.115.41.198
-    lettuce:
-      pool:
-        min-idle: 5
-        max-idle: 10
-        max-active: 8
-        max-wait: 1ms
-      shutdown-timeout: 1000ms
+      resolve-lazily: false
+
+#  redis:
+#    database: 0
+#    password: 981205
+#    port: 6379
+#    host: 47.115.41.198
+#    lettuce:
+#      pool:
+#        min-idle: 5
+#        max-idle: 10
+#        max-active: 8
+#        max-wait: 1ms
+#      shutdown-timeout: 1000ms
 mybatis:
   mapper-locations: classpath*:com/weizhiblog/mapper/*.xml
   type-aliases-package: com.weizhiblog.bean
@@ -33,5 +39,8 @@ mybatis:
 logging:
   level:
     root: info
+    com:
+      weizhiblog:
+        mapper: debug
   file:
-    name: /usr/tmp/uploadFiles/log/log.log
+    name: /usr/tmp/log/log.log
