--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "prettier-eslint": "^11.0.0",
+    "prettier-eslint-cli": "^5.0.0",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
